--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"  type="text/css"  href="style.css">
@@ -9,14 +10,20 @@
 </head>
 <body>
 
-<div class="pic1 pic2 pic3">
+<div class="pic1">
     <div class="cotainer">
-        <div class="boxfade in-box">
-          <div class="inside">
-            <div class="inside-box1">
-                Amirashkan
-            </div>
-          </>
+        <div class="boxfade">
+          <div class="in-box">
+
+            <di class="inside">
+              <div class="name">Amir Ashkan S.D</div>
+            </di>
+
+            <di class="inside2">
+              <div class="list"></div>
+            </di>
+
+         </div>
         </div>
     </div>
 </div>
