--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
         <div class="boxfade">
           <div class="in-box">
 
-            <di class="inside">
-              <div class="name">Amir Ashkan S.D</div>
+            <di class="inside inside-name">
+              <div class="name"><strong>Amir Ashkan S.D</strong> </div>
             </di>
 
             <di class="inside2">
-              <div class="list"></div>
+              <div class="list">
+                <ul>
+                  <li><a href="">Porfolio</a></li>
+                  <br><br>
+                  <li>About Me</li>
+                  <br><br>
+                  <li>Contact Me</li>
+                </ul>
+              </div>
             </di>
 
          </div>
