--- a/index.html
+++ b/index.html
@@ -13,28 +13,31 @@
 <div class="pic1">
     <div class="cotainer">
         <div class="boxfade">
-          <div class="in-box">
 
-            <di class="inside inside-name">
+            <di class="inside">
               <div class="name"><strong>Amir Ashkan S.D</strong> </div>
             </di>
 
             <di class="inside2">
-              <div class="list">
-                <ul>
-                  <li><a href="">Porfolio</a></li>
-                  <br><br>
-                  <li>About Me</li>
-                  <br><br>
-                  <li>Contact Me</li>
+
+                <ul class="listam">
+                  <li class="p"><a href="">Porfolio</a></li>
+                  <li class="a"><a href="">About.Me</a></li>
+                  <li class="c"><a href="">Contact.Me</a></li>
                 </ul>
-              </div>
+
             </di>
 
-         </div>
         </div>
-    </div>
+        <div class="footerfade">
+          <a class="socialicon1" href="" title="LinkedIn">L</a>
+          <a class="socialicon2" href="" title="slack">s</a>
+          <a class="socialicon3" href="" title="GitHub">G</a>
+          <a class="socialicon4" href="" title="stackoverflow">s.o</a>
+          <a class="socialicon5" href="" title="instagram">i</a>
+        </div>
+      </div>
 </div>
-
+s
 </body>
 </html>
